--- a/web/src/app/styles/globals.scss
+++ b/web/src/app/styles/globals.scss
@@ -11,3 +11,11 @@
 .font-open {
 	font-family: 'Open Sans', sans-serif;
 }
+
+.img-responsive {
+    white-space: normal;
+    font-size: 20px;
+    font-family: monospace;
+    line-height: 1.3;
+   }
+   
