--- a/web/src/app/styles/colors.scss
+++ b/web/src/app/styles/colors.scss
@@ -5,18 +5,19 @@ $colors: (
 	white: #dedbd6,
 	yellow: #eace19,
 	green: #45ccb4,
-	black: #161616
+	black: #161616,
+	gray: #252525
 );
 
 @each $name, $color in $colors {
-	.cus-font-color-#{$name} {
+	.color-#{$name} {
 		color: $color;
 	}
-	.cus-background-#{$name} {
+	.background-#{$name} {
 		background-color: $color;
 	}
 }
 
-@mixin cus-color($name) {
-	@extend .cus-font-color-#{$name};
+@mixin color($name) {
+	@extend .color-#{$name};
 }
