--- a/web/src/app/styles/globals.scss
+++ b/web/src/app/styles/globals.scss
@@ -12,10 +12,13 @@
 	font-family: 'Open Sans', sans-serif;
 }
 
-.img-responsive {
-    white-space: normal;
-    font-size: 20px;
-    font-family: monospace;
-    line-height: 1.3;
-   }
-   
+.wolf-design {
+	font-size: 18px;
+	line-height: 1.3;
+	font-family: monospace;
+	white-space: pre;
+}
+
+.bold-span span {
+	font-weight: bold;
+}
